app/assets/stylesheets/home.sass
.home
    height: 100vh
    overflow-x: hidden
    width: 100vw

.menuIcon
    cursor: pointer
    padding: 1rem
    position: absolute
    right: 2rem
    top: 1rem

.menuIconLine
    background-color: white
    border: none
    height: 2px
    margin-top: 10px
    width: 35px

.menuIconLine2
    width: 50px

.menuIconLine3
    width: 20px

.homeBox:first-child
    padding-left: 2rem

.adminLink
    background-color: white
    color: black
    font-size: 75px
    font-weight: 800
    left: 2rem
    letter-spacing: 10px
    position: absolute
    text-decoration: none
    text-transform: uppercase
    top: 2rem

.welcomeP
    background-color: white
    cursor: pointer
    font-size: 12px
    font-weight: bold
    left: 2rem
    letter-spacing: 4px
    line-height: 1.4rem
    position: absolute
    text-transform: uppercase
    top: 9rem

.welcomeP span
    background-color: #fff4f8

.homeBox hr
    background-color: black
    border: none
    height: 4px
    width: 5rem

.homeBox
    float: left
    height: 100vh
    overflow-x: hidden
    width: 30%

.homeBox:last-child
    background-color: black
    width: 70%

.scroll
    bottom: 0
    color: white
    font-weight: bold
    height: 5rem
    letter-spacing: 15px
    position: absolute
    text-transform: uppercase
    width: 70vw

#scrollLineOne
    border: none
    height: 2px
    margin-right: 4rem
    position: relative
    width: calc(70vw - 20rem)

#scrollLineTwo
    background-color: white
    height: 100%
    left: 0
    position: absolute
    top: 0
    transition: width 1s
    width: 0%





// list





.list
    height: 100vh
    width: 100vw

.listItem
    background-color: green
    cursor: pointer
    font-size: 30px
    font-weight: bold
    height: 20vh
    letter-spacing: 10px
    text-transform: uppercase
    transition: width .75s, background-color .4s, color .4s
    white-space: nowrap
    width: 0vw

#item1
    background-color: #F0F8FF

#item2
    background-color: #ffffff

#item3
    background-color: #CAE1FF
    color: white

#item4
    background-color: #F0F8FF

#item5
    background-color: #CAE1FF
    color: white

#item5 hr
    background-color: white
    border: none
    height: 6px
    margin-right: 2rem
    width: 10rem

.listItem:hover
    background-color: black !important
    color: white !important





// music modal





#musicModal
    background-color: rgba(0, 0, 0, .95)
    color: white
    display: none
    font-size: 20px
    height: 0vh
    left: 0
    letter-spacing: 10px
    position: absolute
    text-align: center
    text-transform: uppercase
    transition: height .5s
    top: 0
    width: 100vw

#musicModalX
    cursor: pointer
    font-size: 30px
    left: 2rem
    position: absolute
    top: 1.5rem

#musicModal hr
    background-color: white
    border: none
    height: 2px
    margin: 15px auto 15px auto
    width: 50px
    




// works modal





#worksModal
    background: white
    color: black
    display: none
    height: 0vh
    left: 0
    position: absolute
    top: 0
    transition: height .5s
    width: 100vw

    overflow-y: scroll
    -webkit-overflow-scrolling: touch

.work
    height: 100vh
    position: relative
    width: 100vw

.workImage
    box-shadow: 2px 2px 5px lightgray
    position: absolute
    right: 2rem
    top: 2rem
    width: 55vw

.workTitle h3
    font-size: 25px
    font-weight: 400
    letter-spacing: 8px
    line-height: 4rem
    padding-left: 1rem
    text-transform: uppercase

.workInfo
    height: 100vh
    padding: 1rem
    width: 40vw
    margin-top: 15vh

.workDescription
    font-size: 18px
    letter-spacing: 2px
    margin-bottom: 2rem
    padding: 2rem

.blue
    background-color: #CAE1FF

.workInformation
    font-size: 20px

.feature
    font-size: 15px
    line-height: 2rem
    padding-left: 1rem

.features
    font-size: 20px
    padding: 5px
    text-transform: uppercase

.workLink
    bottom: 5rem
    position: absolute
    right: 1rem
    width: 60vw

.workLink hr
    background-color: black
    border: none
    height: 2px
    width: calc(50vw - 20rem)

.workLink a
    color: black
    letter-spacing: 10px
    margin-left: 2rem
    text-decoration: none
    text-transform: uppercase

#worksModalX
    background-color: white
    border-radius: 50%
    cursor: pointer
    font-size: 30px
    left: 1.5rem
    padding: 15px
    position: absolute
    top: 1rem
    z-index: 30





// about me modal





#aboutMeModal
    background: black
    color: white
    display: none
    height: 0vh
    left: 0
    position: absolute
    text-align: center
    top: 0
    transition: height .5s, opacity .5s
    width: 100vw

.aboutMeText
    height: 100vh
    width: 100vw

#aboutMeModal h3
    font-size: 50px
    line-height: 7rem

#aboutMeModal p
    line-height: 2rem

#aboutX
    cursor: pointer
    font-size: 30px
    left: 1rem
    overflow: hidden
    position: absolute
    top: .5rem





// responsive





@media only screen and (max-width: 1000px)
    .workImage
        position: static
        width: 100vw

    .workTitle
        display: none
        
    .workInfo
        height: auto
        margin-top: 0
        width: 100vw

    .workDescription
        font-size: 25px

    .workLink
        position: static

    .features
        background-color: transparent
    
    .feature
        background-color: #CAE1FF

    .workLink
        height: 4rem
        width: 100vw

    .workLink hr
        width: calc(100vw - 20rem)

@media only screen and (max-width: 740px)
    .adminLink
        font-size: 65px
        letter-spacing: 5px

@media only screen and (max-width: 600px)
    .homeBox
        height: 5rem
        width: 100vw

    .homeBox:last-child
        height: calc(100vh - 5rem)
        width: 100vw

    .adminLink
        color: black
        font-size: 40px
        left: 1rem
        top: 1rem

    .scroll
        font-size: 12px
        height: 2rem
        letter-spacing: 10px
        width: 100vw

    #scrollLineOne
        margin-right: 2rem
        width: calc(100vw - 12rem)

    .listItem
        font-size: 20px

    #musicModal
        font-size: 12px
        letter-spacing: 5px
        padding: 0 1rem 0 1rem

    .menuIcon
        left: 1.5rem
        top: 6rem

    .welcomeP
        background-color: transparent
        color: white
        font-size: 11px
        left: 0
        margin: auto
        right: 0
        text-align: center
        top: 20rem

    .welcomeP span
        background-color: transparent
        text-shadow: none

